fix: overflow

--- a/src/mediaQueries.css
+++ b/src/mediaQueries.css
@@ -1,10 +1,10 @@
 @media (max-width: 1328px) {
     #edwardLayout img {
-        transform: translateX(-80px);
+        transform: translateX(-120px);
     }
 }
 
-@media (max-width: 1040px) {    
+@media (max-width: 1080px) {    
     body {
         padding: 180px 0 64px 120px;
 
@@ -75,12 +75,17 @@
         display: none;
     }
 
-    main a, main a::after {
+    main ul#projects {
+        flex-direction: column;
+    }
+
+    ul#projects a {
         width: 100%;
     }
 
-    main ul#projects {
-        flex-direction: column;
+    main ul#projects a::after {
+        width: calc(100% + var(--paddingTapTargetMobile));
+        transform: translate(calc(-50% - var(--paddingTapTargetMobile)), -50%);
     }
 
     footer ul {
@@ -88,8 +93,10 @@
     }
 
     footer a::after {
-        width: calc(100% + 32px);
+        width: calc(100% + var(--paddingTapTargetMobile));
         height: 48px;
+
+        transform: translate(calc(-50% - var(--paddingTapTargetMobile)), -50%);
     }
 }
 
